# Extracci-nDeDatosEnRedeSociales

./: .env.example  .gitignore  README.md  main.py  main_sentimientos.py  modelo.md  preparar_sesion.py  pyproject.toml  requirements.txt  scraper_facebook.py  scraper_tiktok.py  scraper_youtube.py
article/: README.md  main.tex  references.bib
datos/: dataset_20260715_110053.json  dataset_20260722_102655.json  facebook_publicaciones.json  sentimientos_20260714_210510.json  tiktok_publicaciones.json  x_publicaciones.json  youtube_publicaciones.json
datos_manuales/: COMO_LLENAR.md  x_twitter.csv
modelo/: __init__.py  analizador_groq.py
practica7/: .env.example  README.md  almacenamiento_sentimientos.py  controlador_sentimientos.py  informe.md  main.py  requirements.txt  utilidades.py  ver_sentimientos.py
practica7/datos/: dataset_prueba.json
practica7/interfaz/: app.js  index.html  styles.css
practica7/modelo/: __init__.py  analizador_groq.py  analizador_openai.py
src/: __init__.py  almacenamiento.py  almacenamiento_sentimientos.py  carga_manual.py  config.py  consolidar.py  controlador.py  controlador_sentimientos.py  gestor_login.py  main.py  modelos.py  modelos_sentimiento.py  navegador.py  scraper_facebook.py  scraper_reddit.py  scraper_tiktok.py  scraper_x.py  scraper_youtube.py  utilidades.py
src/extractores/: __init__.py  base.py  facebook.py  tiktok.py  twitter_x.py
webapp/: server.py  storytelling.py
webapp/static/: app.js  index.html  styles.css
