[project]
name = "extraccion-datos-redes-sociales"
version = "1.0.0"
description = "Extracción paralela de opiniones en redes sociales sobre el diseño 'Ecos del Sol' del nuevo Museo Nacional del Ecuador (práctica de Computación Paralela, UPS)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anyio>=4.12.1",
    "appdirs>=1.4.4",
    "beautifulsoup4>=4.15.0",
    "bs4>=0.0.2",
    "certifi>=2026.6.17",
    "charset-normalizer>=3.4.9",
    "cssselect>=1.3.0",
    "dateparser>=1.2.2",
    "demjson3>=3.0.6",
    "facebook-scraper>=0.2.59",
    "fake-useragent>=2.2.0",
    "filetype>=1.2.0",
    "greenlet>=3.2.5",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.18",
    "importlib-metadata>=8.7.1",
    "js2py-3-13>=0.74.1",
    "lxml>=6.1.1",
    "lxml-html-clean>=0.4.5",
    "m3u8>=6.0.0",
    "parse>=1.22.1",
    "playwright>=1.60.0",
    "proxyproviders>=0.2.2",
    "pyee>=13.0.1",
    "pyjsparser>=2.7.1",
    "pyotp>=2.10.0",
    "pyppeteer>=0.0.25",
    "pyquery>=2.0.1",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2026.2",
    "regex>=2026.1.15",
    "requests>=2.32.5",
    "requests-html>=0.10.0",
    "selenium>=4.36.0",
    "six>=1.17.0",
    "socksio>=1.0.0",
    "soupsieve>=2.8.4",
    "tiktokapi>=7.3.3",
    "tqdm>=4.68.4",
    "twikit>=2.3.3",
    "typing-extensions>=4.16.0",
    "tzlocal>=5.3.1",
    "urllib3>=2.6.3",
    "w3lib>=2.3.1",
    "websockets>=15.0.1",
    "webvtt-py>=0.5.1",
    "zipp>=3.23.1",
    "numpy>=2.0.2",
    "webdriver-manager>=4.1.2",
]
